--- a/jagadish.html
+++ b/jagadish.html
@@ -38,21 +38,21 @@
   /* First image (Logo. Full height) */
 
   .bgimg-1 {
-    background-image: url('/images/nature1.jpg');
+    background-image: url('/jaga-profile/images/nature1.jpg');
     min-height: 100%;
   }
 
   /* Second image (Portfolio) */
 
   .bgimg-2 {
-    background-image: url("/images/forest.jpg");
+    background-image: url("/jaga-profile/images/forest.jpg");
     min-height: 400px;
   }
 
   /* Third image (Contact) */
 
   .bgimg-3 {
-    background-image: url("/images/nature2.jpg");
+    background-image: url("/jaga-profile/images/nature2.jpg");
     min-height: 400px;
   }
 
@@ -121,7 +121,7 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <p><b><i class="fa fa-user w3-margin-right"></i>Jagadish J</b></p><br>
-        <img src="/images/myphoto.jpg" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me"
+        <img src="/jaga-profile/images/myphoto.jpg" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me"
           width="500" height="333">
       </div>
 
@@ -184,43 +184,43 @@
     <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
     <div class="w3-row-padding w3-center">
       <div class="w3-col m3">
-        <img src="/images/forest.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity"
+        <img src="/jaga-profile/images/forest.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity"
           alt="The mist over the mountains">
       </div>
 
       <div class="w3-col m3">
-        <img src="/images/forest.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity"
+        <img src="/jaga-profile/images/forest.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity"
           alt="Coffee beans">
       </div>
 
       <div class="w3-col m3">
-        <img src="/images/forest.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity"
+        <img src="/jaga-profile/images/forest.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity"
           alt="Bear closeup">
       </div>
 
       <div class="w3-col m3">
-        <img src="/images/forest.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity"
+        <img src="/jaga-profile/images/forest.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity"
           alt="Quiet ocean">
       </div>
     </div>
 
     <div class="w3-row-padding w3-center w3-section">
       <div class="w3-col m3">
-        <img src="/images/forest.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist">
+        <img src="/jaga-profile/images/forest.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist">
       </div>
 
       <div class="w3-col m3">
-        <img src="/images/forest.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity"
+        <img src="/jaga-profile/images/forest.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity"
           alt="My beloved typewriter">
       </div>
 
       <div class="w3-col m3">
-        <img src="/images/forest.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity"
+        <img src="/jaga-profile/images/forest.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity"
           alt="Empty ghost train">
       </div>
 
       <div class="w3-col m3">
-        <img src="/images/forest.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Sailing">
+        <img src="/jaga-profile/images/forest.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Sailing">
       </div>
       <!-- <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">LOAD MORE</button> -->
     </div>
