--- a/jagadish.html
+++ b/jagadish.html
@@ -206,21 +206,21 @@
 
     <div class="w3-row-padding w3-center w3-section">
       <div class="w3-col m3">
-        <img src="/jaga-profile/images/forest.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist">
+        <img src="/jaga-profile/images/prabalam.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist">
       </div>
 
       <div class="w3-col m3">
-        <img src="/jaga-profile/images/forest.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity"
+        <img src="/jaga-profile/images/ADMIN1.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity"
           alt="My beloved typewriter">
       </div>
 
       <div class="w3-col m3">
-        <img src="/jaga-profile/images/forest.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity"
+        <img src="/jaga-profile/images/khelid.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity"
           alt="Empty ghost train">
       </div>
 
       <div class="w3-col m3">
-        <img src="/jaga-profile/images/forest.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Sailing">
+        <img src="/jaga-profile/images/khelid-dash.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Sailing">
       </div>
       <!-- <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">LOAD MORE</button> -->
     </div>
