--- a/jagadish.html
+++ b/jagadish.html
@@ -128,6 +128,12 @@
       <!-- Hide this text on small devices -->
       <div class="w3-col m6 w3-hide-small w3-padding-large">
         <p>Welcome to my website. I am Jagadish and always like to learn new technology and software tools in the market.My hobby is to design the creative things in the photoshop and love to develop in new upcoming technology like angular, reactjs etc., and also worked in codeigniter and core php to develop user interface designs and also API using PHP with MySQL.</p>
+        <p>
+          I love nature and beatuiful locations in the world.
+        </p>
+        <p>
+          Using PHP language, Software Websites like billing and marketing are developed and maintenanace
+        </p>
       </div>
     </div>
     <p class="w3-large w3-center w3-padding-16">Im really good at:</p>
