--- a/jagadish.html
+++ b/jagadish.html
@@ -130,10 +130,13 @@
         <p>Welcome to my website. I am Jagadish and always like to learn new technology and software tools in the market.My hobby is to design the creative things in the photoshop and love to develop in new upcoming technology like angular, reactjs etc., and also worked in codeigniter and core php to develop user interface designs and also API using PHP with MySQL.</p>
         <p>
           I love nature and beatuiful locations in the world.
+        </p><p>
+          I have more interest in developing products using various technology and implementing to our customers depending on the purposes.
         </p>
         <p>
-          Using PHP language, Software Websites like billing and marketing are developed and maintenanace
+          Using PHP language and MariaDB as backend, Software Websites like billing and marketing are developed and maintenance work done.Now Working on these Billing Softwares on Upgradation using Angular 8 as User Interface design and PHP with MySQL as Backend code.
         </p>
+       
       </div>
     </div>
     <p class="w3-large w3-center w3-padding-16">Im really good at:</p>
@@ -189,7 +192,7 @@
 
     <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
     <div class="w3-row-padding w3-center">
-      <div class="w3-col m3">
+      <!-- <div class="w3-col m3">
         <img src="/jaga-profile/images/forest.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity"
           alt="The mist over the mountains">
       </div>
@@ -207,7 +210,7 @@
       <div class="w3-col m3">
         <img src="/jaga-profile/images/forest.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity"
           alt="Quiet ocean">
-      </div>
+      </div> -->
     </div>
 
     <div class="w3-row-padding w3-center w3-section">
