--- a/jagadish.html
+++ b/jagadish.html
@@ -301,21 +301,21 @@
 
     <div class="w3-row-padding w3-center w3-section">
       <div class="w3-col m3">
-        <img src="/jaga-profile/images/prabalam.png" style="width:100%"  id="myImg" class="w3-hover-opacity" alt="The mist">
+        <img src="/jaga-profile/images/prabalam.png" style="width:100%"  id="myImg" class="w3-hover-opacity" alt="Squaredotssolutions porfolio design">
       </div>
 
       <div class="w3-col m3">
         <img src="/jaga-profile/images/ADMIN1.png" id="myImg1" style="width:100%"  class="w3-hover-opacity"
-          alt="My beloved typewriter">
+          alt="Admin design corrections">
       </div>
 
       <div class="w3-col m3">
 <img src="/jaga-profile/images/khelid.png" id="myImg2"  style="width:100%"   class="w3-hover-opacity"
-  alt="Empty ghost train">
+  alt="Khelid Login Page">
       </div>
 
       <div class="w3-col m3">
-        <img src="/jaga-profile/images/khelid-dash.png" id="myImg3" style="width:100%"  class="w3-hover-opacity" alt="Sailing">
+        <img src="/jaga-profile/images/khelid-dash.png" id="myImg3" style="width:100%"  class="w3-hover-opacity" alt="Khelid Events Page">
       </div>
       <!-- <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">LOAD MORE</button> -->
     </div>
