--- a/jagadish.html
+++ b/jagadish.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <title>Jagadish Portfolio</title>
+<link rel="icon" href="/jaga-profile/images/jagadish_img.jpg" type="image/icon type">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
